--- a/firstnotes.html
+++ b/firstnotes.html
@@ -2,7 +2,7 @@
 <html>
 <title>HTML Tutorial</title>
 <body>
-
+  <h2> a test </h2>
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 </body>
