--- a/day one/cool.html
+++ b/day one/cool.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1> Hello Fall</h1>
+        <h1> SITHS Comfort Dog </h1>
         <ul>
             <li>leaves</li>
             <li>leaves</li>
