--- a/day one/cool.html
+++ b/day one/cool.html
@@ -15,6 +15,7 @@
             <li>leaves</li>
             <li class="test">leaves</li>
         </ul>
+        <img src="fall.jpg" alt="fall image"> 
     <div>
 </body>
 </html>
