--- a/day one/cool.html
+++ b/day one/cool.html
@@ -10,12 +10,16 @@
 <body>
     <div>
         <h1> SITHS Comfort Dog </h1>
+        <h2>Hello welcome to fall</h2>
         <ul>
+            <li>fun</li>
             <li>leaves</li>
-            <li>leaves</li>
-            <li class="test">leaves</li>
+            <li class="test">family</li>
         </ul>
         <img src="fall.jpg" alt="fall image"> 
     <div>
+        <p>
+            <a href="fall.jpg"> this is a link to other website </a>
+        </p>
 </body>
 </html>
