--- a/day one/cool.html
+++ b/day one/cool.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div>
-        <h1> SITHS Comfort Dog </h1>
+        <h1> I love Fall </h1>
         <h2>Hello welcome to fall</h2>
         <ul>
             <li>fun</li>
             <li>leaves</li>
-            <li class="test">family</li>
+            <li> <span class="test">family </span><span></span></li>
         </ul>
         <img src="fall.jpg" alt="fall image"> 
     <div>
