--- a/Box Model/index.html
+++ b/Box Model/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-
 <div class="header">
     <div class="header-text">
         <h1>test</h1>
-         <h2>hello ok</h2>
+        <h2>hello ok</h2>
     </div>
 </div>
+<p> hello this is a new paragraph </p>
 
 
 </body>
