--- a/Original/index.html
+++ b/Original/index.html
@@ -24,3 +24,10 @@
 </body>
 
 </html>
+
+<body>
+    <div>
+         <h1 class="border" id="color"> Nature</h1> 
+         <h2 class="background" id="color" >Hello Earth</h2>
+    </div>
+</body>
